fixing some warnings

--- a/docs/gammanu.ipynb
+++ b/docs/gammanu.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Evaluation of the auxiliary gamma function\n",
+    "# Evaluation of the auxiliary gamma function\n",
     "\n",
     "The evaluation of integrals involving a $\\frac{1}{r}$ term require computing the following:\n",
     "\n",
