Add isosurface visualization

--- a/docs/gto_integrals.ipynb
+++ b/docs/gto_integrals.ipynb
@@ -14,7 +14,7 @@
     "from mess.structure import Structure\n",
     "from mess.basis import basisset\n",
     "from mess.mesh import uniform_mesh, molecular_orbitals\n",
-    "from mess.plot import plot_volume\n",
+    "from mess.plot import plot_volume, plot_isosurfaces\n",
     "from itertools import product"
    ]
   },
@@ -241,7 +241,22 @@
     "# Mapping between orbital label -> index in basis set\n",
     "# TODO: what is this mapping for 6-31+G?\n",
     "# orbital_idx = dict(zip([\"1s\", \"2s\", \"2px\", \"2py\", \"2pz\"], range(5)))\n",
-    "plot_volume(oxygen, orbitals[:, 5], axes)"
+    "\n",
+    "view = oxygen.view()\n",
+    "plot_volume(view, orbitals[:, 4], axes)\n",
+    "view.zoomTo()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot again, this time as isosurfaces\n",
+    "view = oxygen.view()\n",
+    "plot_isosurfaces(view, orbitals[:, 4], axes, percentiles=[98, 75])\n",
+    "view.zoomTo()"
    ]
   },
   {
@@ -684,7 +699,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.10.0"
   },
   "orig_nbformat": 4
  },
