Move visualization code from Structure to plot

--- a/docs/gto_integrals.ipynb
+++ b/docs/gto_integrals.ipynb
@@ -10,11 +10,12 @@
     "import numpy as np\n",
     "import sympy as sp\n",
     "import IPython.display as ipd\n",
+    "import py3Dmol\n",
     "\n",
     "from mess.structure import Structure\n",
     "from mess.basis import basisset\n",
     "from mess.mesh import uniform_mesh, molecular_orbitals\n",
-    "from mess.plot import plot_volume, plot_isosurfaces\n",
+    "from mess.plot import plot_volume, plot_isosurfaces, plot_molecule\n",
     "from itertools import product"
    ]
   },
@@ -242,7 +243,8 @@
     "# TODO: what is this mapping for 6-31+G?\n",
     "# orbital_idx = dict(zip([\"1s\", \"2s\", \"2px\", \"2py\", \"2pz\"], range(5)))\n",
     "\n",
-    "view = oxygen.view()\n",
+    "view = py3Dmol.view()\n",
+    "plot_molecule(view, oxygen)\n",
     "plot_volume(view, orbitals[:, 4], axes)\n",
     "view.zoomTo()\n"
    ]
@@ -254,7 +256,8 @@
    "outputs": [],
    "source": [
     "# Plot again, this time as isosurfaces\n",
-    "view = oxygen.view()\n",
+    "view = py3Dmol.view()\n",
+    "plot_molecule(view, oxygen)\n",
     "plot_isosurfaces(view, orbitals[:, 4], axes, percentiles=[98, 75])\n",
     "view.zoomTo()"
    ]
