--- a/docs/optim.ipynb
+++ b/docs/optim.ipynb
@@ -22,10 +22,10 @@
     "  with the `xc_method` argument.\n",
     "* minimisation of the total energy subject to the constraint of orthonormal orbitals.\n",
     "\n",
-    "\n",
-    "On the second point, there are many possible approaches to the constrained optimisation\n",
-    "problem.  In the following we setup solving this minimisation with the \n",
-    "[optax library](https://optax.readthedocs.io/en/latest/index.html)."
+    "On the second point, there are many possible approaches to solving this constrained \n",
+    "optimisation problem.  In the following we setup minimising the total energy with the \n",
+    "[Adam optimiser](https://optax.readthedocs.io/en/latest/api/optimizers.html#adam) \n",
+    "from the [optax library](https://optax.readthedocs.io/en/latest/index.html)."
    ]
   },
   {
