--- a/docs/quirks.ipynb
+++ b/docs/quirks.ipynb
@@ -47,7 +47,7 @@
     "python process\n",
     "* using the context manager [jax.experimental.disable_x64](https://jax.readthedocs.io/en/latest/_autosummary/jax.experimental.disable_x64.html)\n",
     "\n",
-    "These methods can be used to investigate the mixed-precision electronic structure \n",
+    "These methods can be used to investigate mixed-precision electronic structure \n",
     "simulations."
    ]
   }
