--- a/docs/quirks.ipynb
+++ b/docs/quirks.ipynb
@@ -3,10 +3,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [],
    "source": [
-    "# Copyright (c) 2024 Graphcore Ltd. All rights reserved.\n"
+    "# Copyright (c) 2024 Graphcore Ltd. All rights reserved."
    ]
   },
   {
