--- a/docs/tour.ipynb
+++ b/docs/tour.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [],
    "source": [
     "# Copyright (c) 2024 Graphcore Ltd. All rights reserved."
