remove entirely from built pages

--- a/docs/tour.ipynb
+++ b/docs/tour.ipynb
@@ -5,7 +5,7 @@
    "execution_count": 1,
    "metadata": {
     "tags": [
-     "hide-input"
+     "remove-input"
     ]
    },
    "outputs": [],
@@ -17,7 +17,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Brief Tour of MESS\n",
+    "# Brief Tour of MESS\n",
     "\n",
     "MESS is a modular toolkit for exploring the exciting interface between machine\n",
     "learning, electronic structure, and algorithms.\n",
