--- a/docs/optim.ipynb
+++ b/docs/optim.ipynb
@@ -48,12 +48,13 @@
    ],
    "source": [
     "import jax\n",
-    "import optax\n",
     "import jax.numpy as jnp\n",
-    "from mess import basisset, Hamiltonian, molecule\n",
-    "from mess.structure import nuclear_energy\n",
-    "from tqdm.notebook import tqdm\n",
+    "import optax\n",
     "import seaborn as sns\n",
+    "from tqdm.notebook import tqdm\n",
+    "\n",
+    "from mess import Hamiltonian, basisset, molecule\n",
+    "from mess.structure import nuclear_energy\n",
     "\n",
     "sns.set_theme(style=\"whitegrid\")\n",
     "\n",
