--- a/docs/tour.ipynb
+++ b/docs/tour.ipynb
@@ -425,7 +425,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We've measured a nearly 8X speedup...There are several gotchas of course that will\n",
+    "We've measured a nearly 8X speedup...There are several gotchas of course that will be\n",
     "explored in due time...stay tuned for more!"
    ]
   },
