adding colab setup to notebooks

--- a/docs/batching.ipynb
+++ b/docs/batching.ipynb
@@ -35,7 +35,28 @@
     "the batch we build a `Hamiltonian` for each bond length and stack the built modules to \n",
     "create a batched-Hamiltonian.  This example uses the `sto-3g` basis set and the simple\n",
     "local density approximation of density functional theory but the this formulation isn't\n",
-    "unique to these choices for how the Hamiltonian is represented."
+    "unique to these choices for how the Hamiltonian is represented.\n",
+    "\n",
+    ":::{note}\n",
+    "The following code cell will install MESS into the Google Colab runtime.\n",
+    "Select the 🚀 in the toolbar above to try this out!\n",
+    ":::"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "\n",
+    "if 'google.colab' in sys.modules:\n",
+    "    !pip install git+https://github.com/graphcore-research/mess.git\n"
    ]
   },
   {
