--- a/docs/tour.ipynb
+++ b/docs/tour.ipynb
@@ -30,7 +30,7 @@
         "object will display a 3D visualisation\n",
         "\n",
         ":::{note}\n",
-        "The following code cell will install mess into the Google Colab runtime.\n",
+        "The following code cell will install MESS into the Google Colab runtime.\n",
         "Select the 🚀 in the toolbar above to try this out!\n",
         ":::"
       ]
